# ai-generated-podcast

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  RESEARCH_FINDINGS.md  cleaner.py  episodes.yaml  feed.py  generate_podcast.py  hello.py  main.py  podcast.xml  pyproject.toml  scraper.py  storage.py  tts.py
.devcontainer/: devcontainer.json
.github/workflows/: generate-episode-from-issue.yml  static.yml
docs/: CLAUDE_PROFANITY_FILTER_GUIDE.md  PROFANITY_FILTER_INDEX.md  QUICK_REFERENCE.md  RESEARCH_SUMMARY.md  blog_to_tts_cleaner.py  claude-code-ci-research.md  claude_profanity_filter_examples.py  issue-3-summary.md  issue-4-recommendation.md  parallel-processing-research.md
scripts/: add_episode.py
